# Numerical_methods

./: README.md
Approximation/Gram_schmidt_and_ternary_cpp/: CMakeLists.txt
Approximation/Trigonometric/: CMakeLists.txt
Approximation/approximation_charts/: main.py  punkty.txt  wspolczynniki.txt
Approximation/approximation_cpp/: CMakeLists.txt
Approximation/approximation_cpp/inc/: Funkcje_pom.h
Approximation/approximation_cpp/src/: aprox.cpp
Basic quadratures/: CMakeLists.txt
Basic quadratures/inc/: equations.h  quadratures.h
Basic quadratures/src/: equations.cpp  main.cpp  quadratures.cpp
Complex_numbers_calculator/: CMakeLists.txt  README.md
Complex_numbers_calculator/doc/: complex.txt
Complex_numbers_calculator/inc/: complex.h  headers.h  test.h
Complex_numbers_calculator/src/: functions.cpp  main.cpp  methods.cpp
Complex_numbers_calculator/tests/: test.cpp
Determinant_Permutationally/: CMakeLists.txt  README.md
Determinant_Permutationally/doc/: determinant.txt
Determinant_Permutationally/inc/: test.h
Determinant_Permutationally/src/: functions.cpp  main.cpp  matrix.cpp
Determinant_Permutationally/tests/: test.cpp
Differential equations/Differential_equations_cpp/: CMakeLists.txt
Differential equations/Differential_equations_cpp/inc/: FunkcjePomocnicze.h  Metody_rozw.h  Rownania.h
Differential equations/Differential_equations_cpp/src/: FunkcjePomocnicze.cpp  Metody_rozw.cpp  main.cpp
Differential equations/differential equations_charts/: main.py  punkty1.txt  punkty2.txt  punkty3.txt  punkty4.txt  punkty5.txt
Differential equations/differential_ equations_python/: main.py
Gauss_Legendre_quadrature/: CMakeLists.txt
Gauss_Legendre_quadrature/inc/: fun_pom.h  functions.h
Gauss_Legendre_quadrature/src/: fun_pom.cpp  main.cpp
Gauss_elimination/: CMakeLists.txt
Gauss_elimination/inc/: Funkcje_pom.h  Gauss.h  Gauss_Crouta.h
Gauss_elimination/src/: Funkcje_pom.cpp  Gauss.cpp  Gaussa_Crouta.cpp  main.cpp
Gram_schmidt/Charts/: main.py  plik1.txt  plik2.txt
Gram_schmidt/Gram_schmidta_cpp/: CMakeLists.txt
Gram_schmidt/Hermite/: CMakeLists.txt
Horner_scheme_and_interpolation/: CMakeLists.txt
Horner_scheme_and_interpolation/inc/: methods.h
Horner_scheme_and_interpolation/src/: main.cpp  methods.cpp
LU-decomposition/: CMakeLists.txt
LU-decomposition/inc/: Doolittle.h  Front_back.h  Funkcje_pom.h
LU-decomposition/src/: Doolittle.cpp  (+3 more)
Monte_Carlo/: CMakeLists.txt
Non-linear equations/methods/: CMakeLists.txt
Non-linear equations/methods/inc/: FunkcjePomocnicze.h  Metody_rozw.h  Rownania.h
Non-linear equations/methods/src/: FunkcjePomocnicze.cpp  Motody_rozw.cpp
(+31 files in other folders)
